--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Othello)
 add_executable(${PROJECT_NAME} 
     src/main.cpp
     src/Game.cpp
+    src/Board.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
