--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(${PROJECT_NAME}
     src/main.cpp
     src/Game.cpp
     src/Board.cpp
+    src/LegalMoves.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
