made a struct Int2D that has a x and y value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(${PROJECT_NAME}
     src/Board.cpp
     src/LegalMoves.cpp
     src/Player.cpp
+    src/Int2D.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
